--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"homepage_url": "https://github.com/tosebro/AMZJ-WS",
 	"name": "AMZJ-WS: Amazon Japan Window Shopper",
 	"description": "AMZJ-WS is a chrome extension to extend page view such as trial reading at Amazon.co.jp.",
-	"version": "0.1.0.2",
+	"version": "0.1.0.3",
 	"icons": {
 		"16": "amzj-ws-icon-16.png",
 		"48": "amzj-ws-icon-48.png",
@@ -22,6 +22,18 @@
 			],
 			"js": [
 				"js/amazon-product.js",
+				"js/lib/jquery-3.6.4.min.js"
+			],
+			"css": [
+				"css/amazon.css"
+			]
+		},
+		{
+			"matches": [
+				"https://read.amazon.co.jp/trialReadingAsin=*/marketPlaceId=*/"
+			],
+			"js": [
+				"js/amazon-read.js",
 				"js/lib/jquery-3.6.4.min.js"
 			],
 			"css": [
